k8s/shortener/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-service
  labels:
    app: shortener-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortener-service
  template:
    metadata:
      labels:
        app: shortener-service
    spec:
      containers:
        - name: shortener-service
          image: redddy/shortener-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
