k8s/shortener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener-service
spec:
  selector:
    app: shortener-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
