k8s/shortener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortener-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: shortener.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: shortener-service
                port:
                  number: 8000
